# tetrisTest

./: Dockerfile  README.md  db.sqlite3  manage.py  requirements.txt  setup.cfg  setup.py
Tetris_KG.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
dockerfiles/pgdata/: postmaster.pid
dockerfiles/pgdata/base/1/: 11768_vm  11774  11790  11790_vm  11797  11800  11808  11808_vm  11860_vm  11862  11879_vm  11894_vm  11898_vm  11938  11938_vm  11942  11945  11949_vm  11953_vm  11957  11985_vm  12010  12010_vm  12015
dockerfiles/pgdata/base/12030/: 11768  11774  11774_vm  11776  11777  11786  11786_vm  11788  11789  11797  11797_vm  11799  11800  11823  11824  11846_vm  11850  11857_vm  11860  11864  11879  11885_vm  11894  11898  11903  11903_vm  11905  11906  11953  11989_vm  11995  12000  12005  (+2 more)
dockerfiles/pgdata/global/: 11778  11917_vm  11921_vm  11928  11928_vm  11932  11932_vm  11937  12031  12033  12034  pg_control
dockerfiles/pgdata/pg_stat_tmp/: global.stat
source/: conf.py  index.rst  t.rst  t2.rst
templates/testT/: auth.html  base.html  chat.html  game.html  history.html  home.html  index.html  rating.html  register.html
tetris/: forms.py  models.py  urls.py  views.py
tetris/migrations/: 0001_initial.py  0003_profile_line.py  0004_alter_profile_line_alter_profile_score.py  0005_alter_profile_line_alter_profile_score_and_more.py  0006_alter_profile_user.py  0007_remove_profile_line.py
tetris/static/css/: auth.css  base.css  chat.css  game.css  history.css  rating.css  reg.css
tetris/static/js/: GAME.js  main.js
tetrisTest/: settings.py  wsgi.py
(+31 files in other folders)
