[metadata]
name = Tetris_KG
version = 1.0
[build_sphinx]

project = 'WinX'
version = 1.2
release = 1.2.0
source-dir = 'doc'

[options]
packages = T_KG
install_requires =
    alabaster==0.7.12
    asgiref==3.5.0
    Babel==2.9.1
    bleach==5.0.0
    certifi==2021.10.8
    charset-normalizer==2.0.12
    commonmark==0.9.1
    decorator==5.1.1
    Django==4.0.4
    docutils==0.18.1
    generics==3.4.0
    idna==3.3
    imagesize==1.3.0
    importlib-metadata==4.11.3
    Jinja2==3.1.1
    keyring==23.5.0
    MarkupSafe==2.1.1
    packaging==21.3
    pkginfo==1.8.2
    Pygments==2.11.2
    pyparsing==3.0.8
    pytz==2022.1
    readme-renderer==34.0
    requests==2.27.1
    requests-toolbelt==0.9.1
    rfc3986==2.0.0
    rich==12.2.0
    self==2020.12.3
    six==1.16.0
    snowballstemmer==2.2.0
    Sphinx==4.5.0
    sphinxcontrib-applehelp==1.0.2
    sphinxcontrib-devhelp==1.0.2
    sphinxcontrib-htmlhelp==2.0.0
    sphinxcontrib-jsmath==1.0.1
    sphinxcontrib-qthelp==1.0.3
    sphinxcontrib-serializinghtml==1.1.5
    sqlparse==0.4.2
    twine==4.0.0
    urllib3==1.26.9
    webencodings==0.5.1
    zipp==3.8.0


